WIP script ot fetch projects from github

--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
     <script src="js/magnific-popup-options.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/meeting.js"></script>
+    <script src="js/repos.js"></script>
 
 </body>
 
