--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <a class="mx-auto mx-lg-5" href="/">
             <img src="/images/logos/civictechwr_logo_white.png" alt="Civic Tech WR" class="logo">
         </a> 
-        <div class="container">
+        <div class="container" style="max-width: fit-content;">
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,18 +107,10 @@
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
 
-                            <h3 class="pt-2 mb-3">a little bit about CivicTech</h3>
+                            <h3 class="pt-2 mb-3">A little bit about CivicTech</h3>
 
-                            <p>CivicTech focuses on using technology to enhance how we connect with our local
-                                communities and governments. It’s
-                                about making civic interactions and services more efficient and effective. <br><br>
-                                Civic Tech
-                                Waterloo Region was founded in
-                                July 2017. We're a community group that brings together people from different sectors
-                                and industries to actively solve issues facing our local community using design and
-                                technology.
-                                We were inspired by similar organizations like CivicTechTO, Beta City YEG, and Code for
-                                America Brigades.
+                            <p>CivicTech focuses on using technology to improve how we connect with our local communities and governments. It’s about making civic interactions and services more efficient and effective.
+                                Civic Tech Waterloo Region was founded in July 2017. We’re a community group that brings together people from diverse sectors and industries to collaboratively solve challenges facing our local community using design and technology. We were inspired by similar organizations like CivicTechTO, Beta City YEG, and Code for America Brigades.
                             </p>
                         </div>
                     </div>
@@ -135,13 +127,9 @@
 
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
-                            <h3 class="pt-2 mb-3">hacknights with civictechwr</h3>
+                            <h3 class="pt-2 mb-3">Hacknights with CivicTechWR</h3>
 
-                            <p>We meet every two weeks, alternating between speaker sessions and hacknights. Our speakers are community leaders such
-                                as someone from a local non-profit, government, industry, or any enaged citizen - what matters is that they have
-                                something inspiring or educational to share with our group. During both our speaker sessions and our hacknights, we
-                                also provide space and time for people to come and work together on civic tech projects. Join us at our next
-                                hacknight!
+                            <p>We meet every week, hosting hacknights most weeks and featuring a guest speaker once a month. Our speakers include community leaders from local non-profits, government, industry, or other engaged citizens—anyone with something inspiring or educational to share. Whether it’s a speaker session or a hacknight, we provide a collaborative space for people to work on civic tech projects and connect with others who share their passion for making a difference. Join us at our next hacknight!
                             </p>
                         </div>
                     </div>
