Improve responsive design for mobile devices and adjust section padding

--- a/about.html
+++ b/about.html
@@ -129,6 +129,12 @@
 .section-padding {
     padding: 8em 0em;
 }
+@media screen and (max-width: 480px) {
+            .about-main-centered{
+                padding: 40px;
+                padding-top: 100px;
+            }
+        }
 </style>
 </head>
 <body>
