--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,12 @@
             background-color: var(--secondary-color);
             color: #fff;
         }
+        @media screen and (max-width: 480px) {
+            .projects-main-centered{
+                padding: 40px;
+                padding-top: 100px;
+            }
+        }
     </style>
 </head>
 <body>
