--- a/about.html
+++ b/about.html
@@ -156,10 +156,18 @@
         <div class="abstract-shape shape-star" style="left: 12%; bottom: 25%;"></div>
         <div class="abstract-shape shape-wave" style="right: 15%; bottom: 20%;"></div>
 
+        <div class="organizers-title">What is CivicTechWR?</div>
+        <section class="mt-4">
+            <p>
+                Bringing people together from different sectors and industries to actively solve issues facing our local community. Even though ﻿"tech" is in the name, everyone is welcome and everyone has a skill or experience that is valuable. We welcome people with all types and levels of skills. We're here to work together, inspire each other, exchange ideas and tools, to improve the lives of our community in civic through technology.
+            </p>
+            <h2>tl;dr</h2><h2>We don’t know what we’re doing! We’re figuring it out as we go. If you don't find what you need, feel free to build it</h2>
+        </section>
+        
         <div class="organizers-title">Our Impact</div>
         <section class="mt-4">
             <p>
-                Civic Tech Waterloo Region (CTWR) has been a driving force for positive change in the Tri-City area (Kitchener, Waterloo, and Guelph). By bringing together technologists, designers, activists, and civic leaders, CTWR has fostered a collaborative environment where innovative solutions are developed to address local challenges. Our projects have empowered residents, improved civic engagement, and provided open data tools for the community. We have helped bridge the gap between the tech sector and local government, making civic processes more transparent and accessible. Our events and hacknights have inspired hundreds to use their skills for the public good, making a lasting impact on both the tech and civic communities across the region.
+                Civic Tech Waterloo Region (CTWR) has been a driving force for positive change in the Tri-City area (Kitchener, Waterloo, and Cambridge). By bringing together technologists, designers, activists, and civic leaders, CTWR has fostered a collaborative environment where innovative solutions are developed to address local challenges. Our projects have empowered residents, improved civic engagement, and provided open data tools for the community. We have helped bridge the gap between the tech sector and local government, making civic processes more transparent and accessible. Our events and hacknights have inspired hundreds to use their skills for the public good, making a lasting impact on both the tech and civic communities across the region.
             </p>
         </section>
         <section class="organizers-section shape-container">
