--- a/about.html
+++ b/about.html
@@ -162,7 +162,9 @@
                 Bringing people together from different sectors and industries to actively solve issues facing our local community. Even though ﻿"tech" is in the name, everyone is welcome and everyone has a skill or experience that is valuable. We welcome people with all types and levels of skills. We're here to work together, inspire each other, exchange ideas and tools, to improve the lives of our community in civic through technology.
             </p>
             <strong>tl;dr</strong>
-                <p>We don’t know what we’re doing! We’re figuring it out as we go. If you don't find what you need, feel free to build it</p>
+                <p>We don’t know what we’re doing!</p>
+                <p>We’re figuring it out as we go.</p>
+                <p>If you don't find what you need, feel free to build it</p>
         </section>
         
         <div class="organizers-title">Our Impact</div>
