--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <span class="spinner-rotate"></span>
         </div>
     </section>
-
+    
+    <!--
     <div id="header-container"></div>
     <script>
         // Load the header content
@@ -51,6 +52,7 @@
             })
             .catch(error => console.error('Error loading header:', error));
     </script>
+    -->
 
 
     <main>
@@ -77,11 +79,13 @@
                             </div>
                             <h1 class="hero-title">Tech & Design for Civic Impact</h1>
                             <p class="hero-description">
-                                Join our community of tech enthusiasts and designers working together to solve local challenges
+                                Join our community of tech enthusiasts and designers working together to solve local challenges in the Waterloo region
                             </p>
                             <div class="hero-actions">
                                 <a href="https://www.meetup.com/civictechwr/" class="btn btn-primary"><i class="bi bi-calendar-event" style="margin-right: 8px;"></i>Upcoming Hacknights</a>
-                                <a href="#section_2" class="btn btn-outline">Learn More</a>
+                                <a href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" class="btn btn-outline">Slack</a>
+                                <a href="https://discourse.ctwr.org" class="btn btn-outline" target="_blank">Member Dashboard</a>
+                                <a href="https://civictechwr.github.io/CTWR-Organization-Documentation/blog/" class="btn btn-outline">Blog</a>
                             </div>
                         </div>
                     </div>
