--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
             margin-bottom: 3rem;
         }
         .projects-main-centered {
-            max-width: 1100px;
+            max-width: 1500px;
             margin: 0 auto;
             padding: 100px;
             background: none;
@@ -145,6 +145,56 @@
                 <a href="https://github.com/CivicTechWR" class="btn btn-outline" style="background: transparent; border: 1px solid rgba(0, 0, 0, 0.2); color: #000;">GitHub Organization</a>
             </div>
         </section>
+
+        <!-- NEXT MEETING -->
+        <section class="featured section-padding" id="section_2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-12 mt-5 mt-lg-0">
+                        <div class="about-thumb">
+
+                        
+                            <div class="profile-thumb">
+                                <div class="profile-title">
+                                    <h4 class="mb-0">Upcoming Hacknight</h4>
+                                </div>
+
+                                <div class="profile-body">
+                                    <p>
+                                        <span class="profile-small-title"><a class="bi-question-circle-fill"></a></span>
+                                        <span id="meeting-name"></span>
+                                    </p>
+
+                                    <p>
+                                        <span class="profile-small-title"><a class="bi-calendar-date-fill"></a></span>
+                                        <span id="meeting-date-time"></span>
+                                    </p>
+
+                                    <p>
+                                        <span class="profile-small-title"><a class="bi-pin-fill"></a></span>
+                                        <span id="meeting-location"></span>
+                                    </p>
+
+
+                                </div>
+
+                                <p class="mb-4 d-flex justify-content-center"><a id="meeting-btn"
+                                        class="meeting-btn btn custom-link"
+                                        href="http://www.meetup.com/civictechwr">More Details & RSVP</a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-12">
+                        <img src="/images/hacknight-8.jpg" class="about-image img-fluid" alt="">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+        
     </main>
 
     <div id="footer-container"></div>
