Oops, forgot to call the script

--- a/about.html
+++ b/about.html
@@ -353,6 +353,21 @@
                 <p>Check out our <a href="https://github.com/civictechwr">GitHub</a> to see our contributors and get involved!</p>
             </div>
         </section>
+
+        <section class="mt-5 shape-container">
+            <!-- Abstract Shapes for Get Involved Section -->
+            <div class="abstract-shape shape-wave" style="left: 2%; top: 5%;"></div>
+            <div class="abstract-shape shape-donut" style="right: 3%; top: 10%;"></div>
+            <div class="abstract-shape shape-triangle" style="left: 6%; bottom: 10%;"></div>
+            <div class="abstract-shape shape-blob" style="right: 5%; bottom: 15%;"></div>
+            <h1 style="font-size: 2rem; margin-bottom: 1.5rem;text-align: center;">Get Involved</h1>
+            <p>
+                Interested in contributing to one of our projects or starting a new one? Join us at our weekly hacknights 
+                where we collaborate on these initiatives. No technical experience is required – we welcome people with all 
+                kinds of skills and backgrounds.
+            </p>
+        </section>
+
         <!-- NEXT MEETING -->
         <section class="featured section-padding" id="section_2">
             <div class="container">
@@ -418,5 +433,7 @@
 
 
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/meeting.js"></script>
+
 </body>
 </html>
