--- a/projects.html
+++ b/projects.html
@@ -140,10 +140,6 @@
                 where we collaborate on these initiatives. No technical experience is required – we welcome people with all 
                 kinds of skills and backgrounds.
             </p>
-            <div class="text-center mt-4">
-                <a href="https://www.meetup.com/civictechwr/" class="btn btn-primary" style="margin-right: 15px; background-color: #2d6f72;">Upcoming Hacknights</a>
-                <a href="https://github.com/CivicTechWR" class="btn btn-outline" style="background: transparent; border: 1px solid rgba(0, 0, 0, 0.2); color: #000;">GitHub Organization</a>
-            </div>
         </section>
 
         <!-- NEXT MEETING -->
@@ -297,6 +293,8 @@
 
     document.addEventListener('DOMContentLoaded', loadGitHubProjects);
 </script>
+
+<script src="js/meeting.js"></script>
 
 </body>
 </html>
