--- a/projects.html
+++ b/projects.html
@@ -143,53 +143,10 @@
         </section>
 
         <!-- NEXT MEETING -->
-        <section class="featured section-padding" id="section_2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                        <div class="about-thumb">
-
-                        
-                            <div class="profile-thumb">
-                                <div class="profile-title">
-                                    <h4 class="mb-0">Upcoming Hacknight</h4>
-                                </div>
-
-                                <div class="profile-body">
-                                    <p>
-                                        <span class="profile-small-title"><a class="bi-question-circle-fill"></a></span>
-                                        <span id="meeting-name"></span>
-                                    </p>
-
-                                    <p>
-                                        <span class="profile-small-title"><a class="bi-calendar-date-fill"></a></span>
-                                        <span id="meeting-date-time"></span>
-                                    </p>
-
-                                    <p>
-                                        <span class="profile-small-title"><a class="bi-pin-fill"></a></span>
-                                        <span id="meeting-location"></span>
-                                    </p>
-
-
-                                </div>
-
-                                <p class="mb-4 d-flex justify-content-center"><a id="meeting-btn"
-                                        class="meeting-btn btn custom-link"
-                                        href="http://www.meetup.com/civictechwr">More Details & RSVP</a></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-6 col-12">
-                        <img src="/images/hacknight-8.jpg" class="about-image img-fluid" alt="">
-                    </div>
-
-                </div>
-            </div>
+        <section class="projects-section shape-container mt-5">
+          <h2 class="projects-title">Upcoming Events</h2>
+          <div id="meetup-events" class="text-center"></div>
         </section>
-
-
         
     </main>
 
@@ -294,7 +251,18 @@
     document.addEventListener('DOMContentLoaded', loadGitHubProjects);
 </script>
 
-<script src="js/meeting.js"></script>
+<script type="text/javascript" src="https://secure.meetupstatic.com/simg/event-widget.js"></script>
+<script type="text/javascript">
+  new MeetupWidget({
+    widgetId: 'event-widget',
+    groupUrlname: 'civictechwr',
+    eventCount: 3,
+    style: 'standard',
+    showLogo: true,
+    showDescription: false,
+    showJoinButton: true
+  });
+</script>
 
 </body>
 </html>
