fixing bug - wrong id

--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@
         <!-- NEXT MEETING -->
         <section class="projects-section shape-container mt-5">
           <h2 class="projects-title">Upcoming Events</h2>
-          <div id="meetup-events" class="text-center"></div>
+          <div id="event-widget"></div>
         </section>
         
     </main>
@@ -254,10 +254,10 @@
 <script type="text/javascript" src="https://secure.meetupstatic.com/simg/event-widget.js"></script>
 <script type="text/javascript">
   new MeetupWidget({
-    widgetId: 'event-widget',
-    groupUrlname: 'civictechwr',
+    widgetId: "event-widget",
+    groupUrlname: "civictechwr",
     eventCount: 3,
-    style: 'standard',
+    style: "standard",
     showLogo: true,
     showDescription: false,
     showJoinButton: true
