--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                             <p>CivicTech focuses on using technology to improve how we connect with our local communities and governments. It’s about making civic interactions and services more efficient and effective.
                                 Civic Tech Waterloo Region was founded in July 2017. We’re a community group that brings together people from diverse sectors and industries to collaboratively solve challenges facing our local community using design and technology. We were inspired by similar organizations like CivicTechTO, Beta City YEG, and Code for America Brigades.
                             </p>
+                            <a href="/about.html"><p>You can read more about our team here</p></a>
                         </div>
                     </div>
 
@@ -143,6 +144,7 @@
 
                             <p>We meet every week, hosting hacknights most weeks and featuring a guest speaker once a month. Our speakers include community leaders from local non-profits, government, industry, or other engaged citizens—anyone with something inspiring or educational to share. Whether it’s a speaker session or a hacknight, we provide a collaborative space for people to work on civic tech projects and connect with others who share their passion for making a difference. Join us at our next hacknight!
                             </p>
+                            <a href="https://www.meetup.com/civictechwr/" class="btn btn-primary"><i class="bi bi-calendar-event" style="margin-right: 8px;"></i>Upcoming Hacknights</a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-12">
@@ -201,7 +203,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-12">
-                <h3 class="text-center mb-5">Our Partners</h3>
+                <h3 class="text-center mb-5">Our Thanks To Our Partners</h3>
             </div>
             <div id="sponsor-container" class="row justify-content-center">
                 {% for partner in site.data.partners %}
@@ -226,6 +228,7 @@
                 {% endfor %}
             </div>
         </div>
+        <p>We're always keen to working with our community partner, from corporations to non-profits and everything in between. If you would like to spnonsor us or have an idea for collaboration, please reach out to us at civictechwr@gmail.com</p>
     </div>
 </section>
 
@@ -234,10 +237,9 @@
         <section class="featured section-padding" id="section_2">
             <div class="container">
                 <div class="row">
+                    <h2 style="text-align: center;"> We hope to see you this coming Wednesday</h2>
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
-
-                        
                             <div class="profile-thumb">
                                 <div class="profile-title">
                                     <h4 class="mb-0">Upcoming Hacknight</h4>
