Fixing CSS issues

--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,7 @@
         <div class="abstract-shape shape-star" style="left: 12%; top: 40%;"></div>
         <div class="abstract-shape shape-diamond" style="right: 10%; top: 35%;"></div>
         
+        <h1 style="font-size: 2rem; margin-bottom: 1.5rem;">Highlighted Projects</h1>
         <section class="mt-4 shape-container">
             <!-- Abstract Shapes for Project Description Section -->
             <div class="abstract-shape shape-diamond" style="left: 3%; top: 10%; width: 60px; height: 60px;"></div>
@@ -116,7 +117,6 @@
             </p>
         </section>
 
-        <h1 style="font-size: 2rem; margin-bottom: 1.5rem;">Highlighted Projects</h1>
         <section class="projects-section shape-container">
             <!-- Abstract Shapes for Projects List Section -->
             <div class="abstract-shape shape-square" style="right: 7%; top: 10%;"></div>
@@ -153,6 +153,7 @@
 
         <!-- NEXT MEETING -->
         <section class="featured section-padding" id="section_2">
+            <h2 style="text-align: center;"> We hope to see you this coming Wednesday</h2>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
