--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
-                            <h3 class="pt-2 mb-3">Hacknights with CivicTechWR</h3>
+                            <h3 class="pt-2 mb-3">Hacknights every Wednesday</h3>
 
                             <p>We meet every week, hosting hacknights most weeks and featuring a guest speaker once a month. Our speakers include community leaders from local non-profits, government, industry, or other engaged citizens—anyone with something inspiring or educational to share. Whether it’s a speaker session or a hacknight, we provide a collaborative space for people to work on civic tech projects and connect with others who share their passion for making a difference. Join us at our next hacknight!
                             </p>
@@ -214,7 +214,8 @@
                     {% endif %}
                 {% endfor %}
             </div>
-            
+            <p>We're always keen to working with our community partner, from corporations to non-profits and everything in between. If you would like to spnonsor us or have an idea for collaboration, please reach out to us at civictechwr@gmail.com</p>
+
             <div class="col-lg-12 col-12 mt-5">
                 <h4 class="text-center mb-4">Previous Partners</h4>
             </div>
@@ -228,16 +229,15 @@
                 {% endfor %}
             </div>
         </div>
-        <p>We're always keen to working with our community partner, from corporations to non-profits and everything in between. If you would like to spnonsor us or have an idea for collaboration, please reach out to us at civictechwr@gmail.com</p>
     </div>
 </section>
 
 
         <!-- NEXT MEETING -->
         <section class="featured section-padding" id="section_2">
+            <h2 style="text-align: center;"> We hope to see you this coming Wednesday</h2>
             <div class="container">
                 <div class="row">
-                    <h2 style="text-align: center;"> We hope to see you this coming Wednesday</h2>
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
                             <div class="profile-thumb">
