--- a/about.html
+++ b/about.html
@@ -189,22 +189,8 @@
             <div class="abstract-shape shape-zigzag" style="right: 12%; bottom: 20%;"></div>
             <div class="abstract-shape shape-hexagon" style="left: 15%; bottom: 15%;"></div>
             <div class="organizers-title">Organizers</div>
-            <section class="section-padding shape-container"><div class="col-lg-12 col-12 mt-5"><img src="/images/about-us.jpg" alt="About Us"></div></section>
+            <div class="col-lg-12 col-12 mt-5"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
             <div class="organizers-grid">
-                <div class="organizer-card">
-                    <a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">
-                        <!--<img src="/images/organizers/1743866853685.jpeg" alt="Shay Kennedy" class="organizer-img">-->
-                    </a>
-                    <div class="organizer-name">Shay Kennedy</div>
-                    <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
-                </div>
-                <div class="organizer-card">
-                    <a href="https://www.linkedin.com/in/foudamo/" target="_blank">
-                        <!--<img src="/images/organizers/1747066454092.jpeg" alt="Mohamed Fouda" class="organizer-img">-->
-                    </a>
-                    <div class="organizer-name">Mohamed Fouda</div>
-                    <div class="organizer-contact"><a href="https://www.linkedin.com/in/foudamo/" target="_blank">LinkedIn</a></div>
-                </div>
                 <div class="organizer-card">
                     <a href="https://www.linkedin.com/in/andre-levesque-39617b11/" target="_blank">
                         <!--<img src="/images/organizers/1729533587447.jpeg" alt="Dre Levesque" class="organizer-img">-->
@@ -219,6 +205,20 @@
                     <div class="organizer-name">Fiona Lau</div>
                     <div class="organizer-contact"><a href="https://www.linkedin.com/in/fionalau/" target="_blank">LinkedIn</a></div>
                 </div>
+            </div>
+            <div class="organizer-card">
+                <a href="https://www.linkedin.com/in/foudamo/" target="_blank">
+                    <!--<img src="/images/organizers/1747066454092.jpeg" alt="Mohamed Fouda" class="organizer-img">-->
+                </a>
+                <div class="organizer-name">Mohamed Fouda</div>
+                <div class="organizer-contact"><a href="https://www.linkedin.com/in/foudamo/" target="_blank">LinkedIn</a></div>
+            </div>
+            <div class="organizer-card">
+                <a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">
+                    <!--<img src="/images/organizers/1743866853685.jpeg" alt="Shay Kennedy" class="organizer-img">-->
+                </a>
+                <div class="organizer-name">Shay Kennedy</div>
+                <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
             </div>
         </section>
 
