--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
             <div class="abstract-shape shape-triangle" style="left: 5%; top: 40%;"></div>
             <div class="abstract-shape shape-zigzag" style="right: 12%; bottom: 20%;"></div>
             <div class="abstract-shape shape-hexagon" style="left: 15%; bottom: 15%;"></div>
-            <div class="organizers-title">Organizers</div>
+            <h1>Organizering Team</h1>
             <div class="col-lg-12 col-12 mt-5"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
             <div class="organizers-grid">
                 <div class="organizer-card">
@@ -205,20 +205,20 @@
                     <div class="organizer-name">Fiona Lau</div>
                     <div class="organizer-contact"><a href="https://www.linkedin.com/in/fionalau/" target="_blank">LinkedIn</a></div>
                 </div>
-            </div>
-            <div class="organizer-card">
-                <a href="https://www.linkedin.com/in/foudamo/" target="_blank">
-                    <!--<img src="/images/organizers/1747066454092.jpeg" alt="Mohamed Fouda" class="organizer-img">-->
-                </a>
-                <div class="organizer-name">Mohamed Fouda</div>
-                <div class="organizer-contact"><a href="https://www.linkedin.com/in/foudamo/" target="_blank">LinkedIn</a></div>
-            </div>
-            <div class="organizer-card">
-                <a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">
-                    <!--<img src="/images/organizers/1743866853685.jpeg" alt="Shay Kennedy" class="organizer-img">-->
-                </a>
-                <div class="organizer-name">Shay Kennedy</div>
-                <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
+                <div class="organizer-card">
+                    <a href="https://www.linkedin.com/in/foudamo/" target="_blank">
+                        <!--<img src="/images/organizers/1747066454092.jpeg" alt="Mohamed Fouda" class="organizer-img">-->
+                    </a>
+                    <div class="organizer-name">Mohamed Fouda</div>
+                    <div class="organizer-contact"><a href="https://www.linkedin.com/in/foudamo/" target="_blank">LinkedIn</a></div>
+                </div>
+                <div class="organizer-card">
+                    <a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">
+                        <!--<img src="/images/organizers/1743866853685.jpeg" alt="Shay Kennedy" class="organizer-img">-->
+                    </a>
+                    <div class="organizer-name">Shay Kennedy</div>
+                    <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
+                </div>
             </div>
         </section>
 
