--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
 
-                            <h3 class="pt-2 mb-3">A little bit about CivicTech WR</h3>
+                            <h3 class="pt-2 mb-3">A little bit about CivicTechWR</h3>
 
                             <p>CivicTech focuses on using technology to improve how we connect with our local communities and governments. It’s about making civic interactions and services more efficient and effective.
                                 Civic Tech Waterloo Region was founded in July 2017. We’re a community group that brings together people from diverse sectors and industries to collaboratively solve challenges facing our local community using design and technology. We were inspired by similar organizations like CivicTechTO, Beta City YEG, and Code for America Brigades.
@@ -140,7 +140,7 @@
 
                     <div class="col-lg-6 col-12 mt-5 mt-lg-0">
                         <div class="about-thumb">
-                            <h3 class="pt-2 mb-3">Weekly Hacknights.</> Every Wednesday.</h3>
+                            <h3 class="pt-2 mb-3">Weekly Hacknights.<br>Every Wednesday.</h3>
 
                             <p>We meet every week, hosting hacknights most weeks and featuring a guest speaker once a month. Our speakers include community leaders from local non-profits, government, industry, or other engaged citizens—anyone with something inspiring or educational to share. Whether it’s a speaker session or a hacknight, we provide a collaborative space for people to work on civic tech projects and connect with others who share their passion for making a difference. Join us at our next hacknight!
                             </p>
