--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             gap: 2rem;
             justify-items: center;
             align-items: start;
-            max-width: 900px;
+            padding: 30px;
             margin: 0 auto;
         }
         .organizer-card {
@@ -165,8 +165,8 @@
         <div class="abstract-shape shape-star" style="left: 12%; bottom: 25%;"></div>
         <div class="abstract-shape shape-wave" style="right: 15%; bottom: 20%;"></div>
 
-        <div class="organizers-title">What is CivicTechWR?</div>
-        <section class="mt-4">
+        <section class="section-padding shape-container">
+            <div class="organizers-title">What is CivicTechWR?</div>
             <p>
                 Bringing people together from different sectors and industries to actively solve issues facing our local community. Even though ﻿"tech" is in the name, everyone is welcome and everyone has a skill or experience that is valuable. We welcome people with all types and levels of skills. We're here to work together, inspire each other, exchange ideas and tools, to improve the lives of our community in civic through technology.
             </p>
@@ -174,21 +174,19 @@
             <h4 style="text-align: center;">We don’t know what we’re doing!</h4>
             <h4 style="text-align: center;">We’re figuring it out as we go.</h4>
             <h4 style="text-align: center;">If you don't find what you need, feel free to build it</h4>
-        </section>
         
-        <!--<div class="organizers-title">Our Impact</div> -->
-        <section class="mt-4">
+        <div class="organizers-title"></div>
             <p>
                 Civic Tech Waterloo Region (CTWR) has been a driving force for positive change in the Tri-City area (Kitchener, Waterloo, and Cambridge). By bringing together technologists, designers, activists, and civic leaders, CTWR has fostered a collaborative environment where innovative solutions are developed to address local challenges. Our projects have empowered residents, improved civic engagement, and provided open data tools for the community. We have helped bridge the gap between the tech sector and local government, making civic processes more transparent and accessible. Our events and hacknights have inspired hundreds to use their skills for the public good, making a lasting impact on both the tech and civic communities across the region.
             </p>
         </section>
-        <section class="organizers-section shape-container">
+        <section class="organizers-section section-padding shape-container">
             <!-- Abstract Shapes for Team Section -->
             <div class="abstract-shape shape-square" style="right: 7%; top: 30%;"></div>
             <div class="abstract-shape shape-triangle" style="left: 5%; top: 40%;"></div>
             <div class="abstract-shape shape-zigzag" style="right: 12%; bottom: 20%;"></div>
             <div class="abstract-shape shape-hexagon" style="left: 15%; bottom: 15%;"></div>
-            <h1>Organizering Team</h1>
+            <h3 style="text-align: center;">Organizering Team</h3>
             <div class="col-lg-12 col-12 mt-5"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
             <div class="organizers-grid">
                 <div class="organizer-card">
@@ -220,38 +218,36 @@
                     <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
                 </div>
             </div>
-        </section>
 
-        <section class="shoutout-section section-padding shape-container">
             <!-- Abstract Shapes for Shoutout Section -->
             <div class="abstract-shape shape-diamond" style="left: 3%; top: 10%;"></div>
             <div class="abstract-shape shape-cross" style="right: 4%; top: 15%;"></div>
             <div class="abstract-shape shape-circle" style="left: 10%; bottom: 20%;"></div>
             <div class="abstract-shape shape-blob" style="right: 8%; bottom: 25%;"></div>
             <div class="container text-center">
-                <h3>Big Shoutout also to</h3>
-                <p>Special thanks to all the volunteers and community members who have contributed to our projects and events over the years.</p>
-                <div class="shoutout-list">
-                    <div class="shoutout-member">
-                        <div class="shoutout-member-name"><a href="https://github.com/qedi-r" target="_blank">Christian Snyder</a></div>
-                    </div>
-                    <div class="shoutout-member">
-                        <div class="shoutout-member-name"><a href="https://github.com/pnijjar" target="_blank">Paul Nijjar</a></div>
-                    </div>
-                    <div class="shoutout-member">
-                        <div class="shoutout-member-name"><a href="https://github.com/mmmaxwwwell" target="_blank">Maxwell Veenendaal</a></div>
-                    </div>
-                    <div class="shoutout-member">
-                        <div class="shoutout-member-name"><a href="https://github.com/derjohng" target="_blank">John Gibbons</a></div>
-                    </div>
-                    <div class="shoutout-member">
-                        <div class="shoutout-member-name"><a href="https://github.com/KristinaTaylor" target="_blank">Kristina Taylor</a></div>
-                    </div>
-                    <div class="shoutout-member">
-                        <div class="shoutout-member-name"><a href="https://github.com/apurvakb" target="_blank">Apurva Bhargava</a></div>
-                    </div>
+            <h3>Big Shoutout also to</h3>
+            <p>Special thanks to all the volunteers and community members who have contributed to our projects and events over the years.</p>
+            <div class="shoutout-list">
+                <div class="shoutout-member">
+                    <div class="shoutout-member-name"><a href="https://github.com/qedi-r" target="_blank">Christian Snyder</a></div>
                 </div>
-                <p> </p>
+                <div class="shoutout-member">
+                    <div class="shoutout-member-name"><a href="https://github.com/pnijjar" target="_blank">Paul Nijjar</a></div>
+                </div>
+                <div class="shoutout-member">
+                    <div class="shoutout-member-name"><a href="https://github.com/mmmaxwwwell" target="_blank">Maxwell Veenendaal</a></div>
+                </div>
+                <div class="shoutout-member">
+                    <div class="shoutout-member-name"><a href="https://github.com/derjohng" target="_blank">John Gibbons</a></div>
+                </div>
+                <div class="shoutout-member">
+                    <div class="shoutout-member-name"><a href="https://github.com/KristinaTaylor" target="_blank">Kristina Taylor</a></div>
+                </div>
+                <div class="shoutout-member">
+                    <div class="shoutout-member-name"><a href="https://github.com/apurvakb" target="_blank">Apurva Bhargava</a></div>
+                </div>
+            </div>
+            <p> </p>
             </div>
             <div class="container text-center"><p>Check out our <a href="https://github.com/civictechwr">GitHub</a> to see our contributors and get involved!</p></div>
         </section>
