--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
         <div class="abstract-shape shape-star" style="left: 12%; top: 40%;"></div>
         <div class="abstract-shape shape-diamond" style="right: 10%; top: 35%;"></div>
         
-        <h1 style="font-size: 2rem; margin-bottom: 1.5rem;">Highlighted Projects</h1>
+        <h1 style="text-align: center;">Highlighted CTWR Projects</h1>
         <section class="mt-4 shape-container">
             <!-- Abstract Shapes for Project Description Section -->
             <div class="abstract-shape shape-diamond" style="left: 3%; top: 10%; width: 60px; height: 60px;"></div>
