--- a/about.html
+++ b/about.html
@@ -164,9 +164,8 @@
         <div class="abstract-shape shape-donut" style="right: 8%; top: 15%;"></div>
         <div class="abstract-shape shape-star" style="left: 12%; bottom: 25%;"></div>
         <div class="abstract-shape shape-wave" style="right: 15%; bottom: 20%;"></div>
-
+        <h1 style="text-align:center;">What is CivicTechWR?</h1>
         <section class="section-padding shape-container">
-            <div class="organizers-title">What is CivicTechWR?</div>
             <p>
                 Bringing people together from different sectors and industries to actively solve issues facing our local community. Even though ﻿"tech" is in the name, everyone is welcome and everyone has a skill or experience that is valuable. We welcome people with all types and levels of skills. We're here to work together, inspire each other, exchange ideas and tools, to improve the lives of our community in civic through technology.
             </p>
@@ -187,7 +186,6 @@
             <div class="abstract-shape shape-zigzag" style="right: 12%; bottom: 20%;"></div>
             <div class="abstract-shape shape-hexagon" style="left: 15%; bottom: 15%;"></div>
             <h3 style="text-align: center;">Organizering Team</h3>
-            <div class="col-lg-12 col-12 mt-5"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
             <div class="organizers-grid">
                 <div class="organizer-card">
                     <a href="https://www.linkedin.com/in/andre-levesque-39617b11/" target="_blank">
@@ -218,6 +216,7 @@
                     <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
                 </div>
             </div>
+            <div class="col-lg-12 col-12"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
 
             <!-- Abstract Shapes for Shoutout Section -->
             <div class="abstract-shape shape-diamond" style="left: 3%; top: 10%;"></div>
@@ -225,7 +224,7 @@
             <div class="abstract-shape shape-circle" style="left: 10%; bottom: 20%;"></div>
             <div class="abstract-shape shape-blob" style="right: 8%; bottom: 25%;"></div>
             <div class="container text-center">
-            <h3>Big Shoutout also to</h3>
+            <br><h3>Big Shoutout also to</h3>
             <p>Special thanks to all the volunteers and community members who have contributed to our projects and events over the years.</p>
             <div class="shoutout-list">
                 <div class="shoutout-member">
