--- a/about.html
+++ b/about.html
@@ -185,7 +185,8 @@
             <div class="abstract-shape shape-triangle" style="left: 5%; top: 40%;"></div>
             <div class="abstract-shape shape-zigzag" style="right: 12%; bottom: 20%;"></div>
             <div class="abstract-shape shape-hexagon" style="left: 15%; bottom: 15%;"></div>
-            <h3 style="text-align: center;">Organizering Team</h3>
+            <h3 style="text-align: center; padding: 20px;">Organizering Team</h3>
+            <div class="col-lg-12 col-12"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
             <div class="organizers-grid">
                 <div class="organizer-card">
                     <a href="https://www.linkedin.com/in/andre-levesque-39617b11/" target="_blank">
@@ -216,7 +217,7 @@
                     <div class="organizer-contact"><a href="https://www.linkedin.com/in/shaydreamside/" target="_blank">LinkedIn</a></div>
                 </div>
             </div>
-            <div class="col-lg-12 col-12"><img style ="max-width: 100%;" src="/images/about-us.jpg" alt="About Us"></div>
+
 
             <!-- Abstract Shapes for Shoutout Section -->
             <div class="abstract-shape shape-diamond" style="left: 3%; top: 10%;"></div>
