updating blog & feedback links

--- a/footer.html
+++ b/footer.html
@@ -7,11 +7,13 @@
     <div class="footer-col footer-links">
   <div class="footer-col-title"></div>
   <ul class="footer-links-list">
-    <li><a href="https://civictechwr.github.io/CTWR-Organization-Documentation/blog/">Blog</a></li>
+    <li><a href="https://civictechwr.github.io/blog/">Blog</a></li>
     <li><a href="/#section_3">Projects</a></li>
     <li><a href="/#section_4">Partners</a></li>
     <li><a href="/about.html">About Us</a></li>
+    <li><a href="https://feedback.ctwr.org">Got Feedback?</a></li>
   </ul>
+  <!--
   <div class="footer-col-title" style="margin-top:2em;">Our Projects in the Media</div>
   <ul class="footer-links-list">
     <li><a href="https://www.cbc.ca/news/canada/kitchener-waterloo/waterloo-region-organizations-voter-information-surveys-1.4870468">CBC - Oct 20, 2018</a></li>
@@ -19,6 +21,7 @@
     <li><a href="https://www.therecord.com/news-story/8847728-techies-mobilizing-for-this-fall-s-municipal-elections-in-waterloo-region/">The Record - Aug 19, 2018</a></li>
   </ul>
 </div>
+-->
     <div class="footer-col footer-support">
       <div class="footer-col-title">SUPPORT</div>
       <div class="footer-support-text">By donating to CivicTechWR, you're helping us design a better community.</div>
@@ -31,7 +34,6 @@
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Guidelines & Templates</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Code_of_Conduct">Code of Conduct</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Diversity_and_Inclusion_Policy">Diversity and Inclusion Policy</a></li>
-        <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/blog">Recaps</a></li>
         <a class="footer-login-btn" href="https://discourse.ctwr.org" target="_blank">Log In</a>
       </ul>
       <div class="footer-social-icons">
