--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <a href="https://www.meetup.com/civictechwr/" class="btn btn-primary"><i class="bi bi-calendar-event" style="margin-right: 8px;"></i>Upcoming Hacknights</a>
                                 <a href="https://join.slack.com/t/civictechwr/shared_invite/zt-2hk4c93hv-DEIbxR_z1xKj8cZmayVHTw" class="btn btn-outline">Slack</a>
                                 <a href="https://discourse.ctwr.org" class="btn btn-outline" target="_blank">Member Dashboard</a>
-                                <a href="https://civictechwr.github.io/CTWR-Organization-Documentation/blog/" class="btn btn-outline">Blog</a>
+                                <a href="https://civictechwr.github.io/blog/" class="btn btn-outline">Blog</a>
                             </div>
                         </div>
                     </div>
