fixing spacing issue in footer

--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
     <li><a href="/about.html">About Us</a></li>
     <li><a href="https://feedback.ctwr.org">Got Feedback?</a></li>
   </ul>
-  <div class="footer-col-title" style="margin-top:2em;">Our Projects in the Media</div>
+  <div class="footer-col-title" style="margin-top:2em;"></div>
   <ul class="footer-links-list">
     <!--
     <li><a href="https://www.cbc.ca/news/canada/kitchener-waterloo/waterloo-region-organizations-voter-information-surveys-1.4870468">CBC - Oct 20, 2018</a></li>
