--- a/footer.html
+++ b/footer.html
@@ -31,6 +31,8 @@
     <div class="footer-col footer-connect">
       <div class="footer-col-title">Get Involved</div>
       <ul class="footer-links-list">
+        <li><a href="https://discourse.ctwr.org/">Member Dashboard</a></li>
+        <li><a href="https://feedback.ctwr.org/">Got Feedback?</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/FAQ">Frequently Asked Questions (FAQ)</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/Guidelines_&_Templates">Guidelines & Templates</a></li>
         <li><a href="http://civictechwr.github.io/CTWR-Organization-Documentation/policies/Code_of_Conduct">Code of Conduct</a></li>
