--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <span class="badge-icon">&lt;/&gt;</span>
                                 <span class="badge-text">Welcome to CivicTechWR</span>
                             </div>
-                            <h1 class="hero-title">Tech & Design for Civic Impact</h1>
+                            <h1 class="hero-title">Civic Change through Tech and Design</h1>
                             <p class="hero-description">
                                 Join our community of tech enthusiasts and designers working together to solve local challenges in the Waterloo region
                             </p>
