Restructure website layout and improve content organization
- Updated footer navigation: changed Featured Projects link to point to /projects.html
- Reorganized about.html: moved CTWR impact paragraph to main content, removed duplicate content
- Cleaned up about.html styling: removed unused CSS classes and improved layout
- Restructured index.html: moved partners section to bottom after main content
- Enhanced partners section presentation with better typography
- Removed redundant sponsors section from about.html to avoid duplication
- Improved content flow and user experience across pages

--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,7 @@
     <ul class="footer-links-list">
       <li><a href="https://civictechwr.org">Homepage</a></li>
       <li><a href="https://civictechwr.github.io/blog/">Blog</a></li>
-      <li><a href="/#section_3">Featured Projects</a></li>
+      <li><a href="/projects.html">Featured Projects</a></li>
       <li><a href="/#section_4">Our Partners</a></li>
       <li><a href="/about.html">About Us</a></li>
     </ul>
